// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar default values renders correctly 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  classes={
    Object {
      "paper": "",
    }
  }
  open={false}
  variant="persistent"
>
  <WithStyles(DrawerHeader) />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Sidebar isSidebarOpen = true, className, handleDrawerClose, children are defined renders correctly 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="className"
  classes={
    Object {
      "paper": "",
    }
  }
  open={true}
  variant="persistent"
>
  <WithStyles(DrawerHeader)
    handleDrawerClose={[MockFunction]}
  />
  <child>
    some child
  </child>
</WithStyles(ForwardRef(Drawer))>
`;
